--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,16 @@
-// TODO
+.headerContainer {
+  flex: 1;
+}
+
+.headerContent {
+  max-width: 720px;
+  padding: 0 1rem;
+
+  height: 100%;
+
+  margin: 0 auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
