--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,73 @@
-// TODO
+.container {
+  max-width: 720px;
+  width: 100%;
+  padding: 0 1rem;
+  margin: 0 auto;
+  height: calc(100vh - 10rem);
+
+  display: flex;
+  flex-direction: column;
+}
+
+.posts {
+  a {
+    display: block;
+
+    & + a {
+      margin-top: 1rem;
+    }
+
+    strong {
+      font-size: 1.5rem;
+    }
+
+    p {
+      font-size: 1rem;
+      color: var(--gray-300);
+      margin-top: 0.5rem;
+    }
+
+    div {
+      display: flex;
+      flex-direction: row;
+
+      margin-top: 1.5rem;
+      gap: 1.5rem;
+
+      span {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        color: var(--gray-400);
+        gap: 0.5rem;
+      }
+    }
+
+    transition: color 0.3s;
+    &:hover {
+      color: var(--pink-500);
+    }
+  }
+}
+
+.loadingMore {
+  width: fit-content;
+  display: block;
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  outline: inherit;
+
+
+  margin-top: 4rem;
+
+  cursor: pointer;
+  color: var(--pink-500);
+
+  transition: filter 0.3s;
+  &:hover {
+    filter: brightness(0.9);
+  }
+}
