--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,68 @@
-// TODO
+.container {
+  max-width: 720px;
+  width: 100%;
+  padding: 5rem 1rem 0 1rem;
+  margin: 0 auto;
+  height: calc(100vh - 5rem - 400px);
+
+  display: flex;
+  flex-direction: column;
+
+  header {
+    h1 {
+      font-size: 2.625rem;
+    }
+
+    .additionalInfos {
+      display: flex;
+      flex-direction: row;
+
+      gap: 1.5rem;
+      margin-top: 1.5rem;
+
+      span {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        font-size: 0.875rem;
+        color: var(--gray-400);
+        gap: 0.5rem;
+
+        svg {
+          font-size: 1.25rem;
+        }
+      }
+    }
+  }
+
+  .content {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+
+    letter-spacing: .3px;
+    line-height: 1.6;
+
+    h2 {
+      font-size: 2.25rem;
+      margin-bottom: 2rem;
+      margin-top: 2.5rem;
+    }
+
+    a {
+      text-decoration: underline;
+
+      transition: color 200ms linear;
+      &:hover {
+        color: var(--pink-500);
+      }
+    }
+  }
+}
+
+.banner {
+  height: 400px;
+  width: 100%;
+
+  object-fit: cover;
+}
