--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,9 @@
-// TODO
+.fallback {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 2rem;
+  color: var(--pink-500);
+}
